--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <h1 id="title">Drum 🥁 Kit</h1>
+  <h1 id="title">The 🥁 Band</h1>
   <div class="set">
     <button class="w drum">w</button>
     <button class="a drum">a</button>
@@ -24,7 +24,7 @@
   <script src="index.js", charset="utf-8"></script>
 
   <footer>
-    Made with ❤️ in INDIA.
+    Made with ❤️ by Santoshi.
   </footer>
 </body>
 
